HelloUltraviolet/Fixtures/RejectedSource/Statements/ReturnTypeMismatch/Source/Main.uv
//! Rejected statement specimen for return type mismatch.

public procedure returnTypeMismatchReference() -> i32 {
    return true
}
